--- a/main.tex
+++ b/main.tex
@@ -49,11 +49,11 @@
 \maketitle
 
 \begin{abstract}
-Statistical downscaling techniques that are of the perfect prognosis type rely on statistical relationships established between observational data for both predictands and predictors. Predictors are often retrieved from reanalyses, which are considered as pseudo-observations. The impact of the choice of a reanalysis dataset on the skill of the downscaling method is often overlooked as global reanalyses are frequently assumed to be equivalent for the last decades and for data-rich regions such as Europe. However, it was recently shown that the selection of a reanalysis dataset has an impact on the skill of the method that can be even higher than the selection of the predictor variables. The obvious general tendency is that reanalyses that are processed by more recent atmospheric models and that assimilate more data perform better. 
+Statistical downscaling techniques that are of the perfect prognosis type rely on statistical relationships established between observational data for both predictands and predictors. Predictors are often retrieved from reanalyses, which are considered as pseudo-observations. The impact of the choice of a reanalysis dataset on the skill of the downscaling method is often overlooked as global reanalyses are frequently assumed to be equivalent for the last decades and for data-rich regions such as Europe. However, it was recently shown that the selection of a reanalysis dataset has an impact on the skill of the method that can be even higher than the choice of the predictor variables. Generally, reanalyses that are processed by more recent atmospheric models and that assimilate more data perform better. 
 
-Following the recent release of ERA5, this work aims at assessing the extent of the potential gain compared to other global reanalyses, including its predecessor, ERA-interim. The assessment was carried out using six variants of analog methods, which are statistical downscaling techniques, to predict the daily precipitation at 301 stations in Switzerland. Among the ten reanalyses that were compared, ERA5 ended up in the best performing datasets, and was the best choice for 50\% of the stations in average across the different analog methods. 
+Following the recent release of ERA5, this work aims at assessing the extent of the potential gain compared to other global reanalyses, including its predecessor, ERA-interim. The assessment was carried out using six variants of analog methods, which are statistical downscaling techniques, to predict the daily precipitation at 301 stations in Switzerland. ERA5 ended up among the best performing reanalyses, and proved the best choice for 50\% of the stations on average across the different analog methods. 
 
-However, ERA5 is distributed with a high spatial resolution (0.25\degree), which turned out to be not relevant for analog methods, and which can even be a trap for simple calibration techniques. Indeed, the domains over which the predictor fields are compared need to be optimized, and high-resolution grids come along with numerous sub-optimal local minima. Besides the risk of poorly-calibrated domains, the high resolution also involves much higher computational time for no gain in skill, as long as the predictors are at synoptic scale.
+However, ERA5 is distributed with a high spatial resolution (0.25\degree), which turned out to be not relevant for analog methods, and which can even be a trap for simple calibration techniques. Indeed, the domains over which the predictor fields are compared need to be optimized, and high-resolution grids come along with numerous sub-optimal local minima. Besides the risk of poorly-calibrated domains, the high resolution also involves much higher computational time for no gain in skill, as long as the predictors considered are at synoptic scale.
 
 
 % Please include a maximum of seven keywords
@@ -62,11 +62,11 @@ However, ERA5 is distributed with a high spatial resolution (0.25\degree), which
 
 \section{Introduction}
 
-Analog methods (AMs), which are part of the statistical downscaling techniques, aim at predicting local meteorological variables, often daily precipitation, based on large-scale predictors. AMs rely on the hypothesis that similar synoptic situations are likely to result in similar local effects, plus a certain variability that is not explained by the considered predictors \citep{Lorenz1969}. To account for this unexplained variability, an ensemble of analog situations is considered, providing an statistical prediction in the form of an empirical conditional distribution made of the corresponding observed predictand values. Multiple variants of the AM exist, eventually with different structures and approach, but mainly with different selections of predictors.
+Analog methods (AMs), which are part of the statistical downscaling techniques, aim at predicting local meteorological variables, often daily precipitation, based on large-scale predictors. AMs rely on the hypothesis that similar synoptic situations are likely to result in similar local effects, plus a certain variability that is not explained by the considered predictors \citep{Lorenz1969}. To account for this unexplained variability, an ensemble of analog situations is considered, providing a statistical prediction in the form of an empirical conditional distribution made of the corresponding observed predictand values. Multiple variants of the AM exist, eventually with different structures and approach, but mainly with different selections of predictors.
 
 AMs are most often developed in a perfect prognosis framework \citep{Rummukainen1997, Maraun2010}, where the relationship is calibrated between large-scale and local-scale observations. In this context, global reanalyses are the datasets of choice for the large-scale variables as they provide multivariate gridded outputs that are physically consistent and available all around the globe \citep{Gelaro2017}. There are globally two main types of reanalysis products: those that aim for homogeneity over a long period -- starting at the beginning of the 20th century -- and thus assimilate surface data only, and those that aim for accuracy over a more recent period and that assimilate a maximum of observations, including multiple satellite products. The accuracy of the reanalyses depends on the quality of the model physics and that of the analysis process, thus on the quantity and quality of the assimilated observations \citep{Dee2011a}.
 
-The choice of a reanalysis dataset to be used in an AM can be driven by the context of the application, for example if it requires to cover the 20th century or to be used in an operational context, with the target situation being provided by a NWP model. In the first case, ECMWF twentieth century reanalyses \citep[ERA-20C or CERA-20C --][]{Poli2016, Laloyaux2016} or the Twentieth Century Reanalysis \citep[20CR --][]{Compo2011} produced by NOAA can be used \citep[for example,][]{Kuentz2015, Caillouet2016, Brigode2016, Bonnet2017}. In the second case, one should prefer a reanalysis that is produced by the same model as the operational forecast to reduce the inter-models biases. However, in many cases, the selection of the reanalysis is arbitrary and might be driven by a preference for the local provider. 
+The choice of a reanalysis dataset to be used in an AM can be driven by the context of the application, for example if it requires to cover the 20th century or to be used in an operational context, with the target situation being provided by a NWP model. In the first case, ECMWF twentieth century reanalyses \citep[ERA-20C or CERA-20C --][]{Poli2016, Laloyaux2016} or the Twentieth Century Reanalysis \citep[20CR --][]{Compo2011} produced by NOAA can be used \citep[for example,][]{Kuentz2015, Caillouet2016, Brigode2016, Bonnet2017}. In the second case, one should prefer a reanalysis that is produced by the same NWP model as the operational forecast to reduce the inter-models biases. One might also prefer a sub-optimal reanalysis but that offers a longer archive thus containing more candidate analogs. However, in many cases, the selection of the reanalysis is arbitrary and might be driven by a preference for the local provider. 
 
 NCEP/NCAR Reanalysis 1 \citep[NR-1 --][]{Kalnay1996, Kistler2001} and NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} were used in many applications of AMs \citep{Timbal2003, Bontron2004, Wetterhall2005a, Gangopadhyay2005, Altava-Ortiz2006, Barrera2007, Cannon2007, Matulla2007, Bliefernicht2007, Maurer2008, BenDaoud2009, Wu2012, Marty2012, Teng2012, Horton2012, Yiou2014}. ERA-40 \citep{Uppala2005}, produced by ECMWF, has also been used substantially \citep {BenDaoud2009, Willems2011b, JakobThemessl2011a, BenDaoud2011, Turco2011a, Franke2011, Pascual2012b, Schenk2012, Ribalaygua2013a, Osca2013, Radanovics2013, Martin2014b, Chardon2014, BenDaoud2016}. Its sucessor, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, has been used by \cite{Raynaud2016b}. NASA's Modern-Era Retrospective Analysis for Research and Applications \citep[MERRA -- ][]{Rienecker2011} has been used by \citet{Vanvyve2015}. The Japanese products, the Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} and its conventional-only JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, were not used in AMs to the author knowledge. Newer products, such as NCEP's the Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a} or MERRA version 2 \citep[MERRA-2 -- ][]{Gelaro2017} are not much used yet in AMs. One can often observe a lag between the release of a new reanalysis dataset and its adoption in AMs.
 
@@ -85,7 +85,7 @@ The present work aims at comparing ERA5 \citep{Hersbach2019} to other global rea
 
 The other reanalyses are full-input products as they assimilate all available data, including satellite data \citep{Fujiwara2017}. The NCEP/NCAR Reanalysis I \citep[NR-1 --][]{Kalnay1996, Kistler2001} was the first global reanalysis, followed by the NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} that fixed some identified problems. The Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a} is the most recent reanalysis by NCEP. The Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} is produced by the Japan Meteorological Agency (JMA). Its version using conventional data only, JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, was not considered in this work as it provides similar results as JRA-55 \citep{Horton2018b}. NASA's Global Modeling and Assimilation Office (GMAO) released the Modern-Era Retrospective Analysis for Research and Applications, version 2 \citep[MERRA-2 -- ][]{Gelaro2017}, which is an improvement of the first MERRA reanalysis \citep{Rienecker2011}. Finally, the predecessor of ERA5, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, was also considered.
 
-ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It profits from multiple improvements to the Integrating Forecasting System (IFS), in terms of model physics, core dynamics, and data assimilation \citep{Hersbach2019}. It provides more outputs, with higher temporal (hourly) and spatial (0.28\degree; 31~km) resolutions. The use of a 10-member ensemble of data assimilations at a lower spatial and temporal resolution allows providing an estimate of the uncertainty. ERA5 assimilates significantly more data than ERA-Interim, such as ground-based radar and new satellite sensors, and uses improved observation operators, which allows to better compare model outputs and observations. Additionally, it indirectly profits from improvements of historical observations, both for conventional and satellite data \citep{Hersbach2019}. ERA5 is also more appropriate for climate analyses as it relies on suitable radiative forcing and boundary conditions (e.g. changes in greenhouse gases, aerosols, SST, and sea ice).
+ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It benefits from multiple improvements to the Integrating Forecasting System (IFS), in terms of model physics, core dynamics, and data assimilation \citep{Hersbach2019}. It provides more outputs, with higher temporal (hourly) and spatial (0.28\degree; 31~km) resolutions. The use of a 10-member ensemble of data assimilations at a lower spatial and temporal resolution allows providing an estimate of the uncertainty. ERA5 assimilates significantly more data than ERA-Interim, such as ground-based radar and new satellite sensors, and uses improved observation operators, which allows to better compare model outputs and observations. Additionally, it indirectly profits from improvements of historical observations, both for conventional and satellite data \citep{Hersbach2019}. ERA5 is also more suitable for climate analyses as it relies on appropriate radiative forcing and boundary conditions (e.g. changes in greenhouse gases, aerosols, SST, and sea ice).
 
 
 \begin{table}[bt]
@@ -133,7 +133,7 @@ ERA5 \citep{Hersbach2019} is meant to replace ERA-Interim. It profits from multi
 \subsection{Precipitation dataset}
 \label{sec:precipitation}
 
-The local variable to be predicted is here daily precipitation totals (06:00~h~UTC to 06:00~h~UTC the following day) at 301 stations of the MeteoSwiss network in Switzerland (Fig. \ref{fig:stations}), with a good coverage of the 1981--2010 period. The 30-year precipitation dataset was divided into a calibration period (CP) and an independent validation period (VP), which was evenly distributed over the entire series (1 year out of every 5; total of 6 years). The archive period (AP), where the analogue dates are being retrieved, is the same as the CP -- also with the VP being excluded -- with an additional exclusion of $\pm30$ days around the target date. Results are always presented for the VP.
+The local variables to be predicted are here daily precipitation totals (06:00~h~UTC to 06:00~h~UTC the following day) at 301 stations of the MeteoSwiss network in Switzerland (Fig. \ref{fig:stations}), with a good coverage of the 1981--2010 period. The 30-year precipitation dataset was divided into a calibration period (CP) and an independent validation period (VP), which was evenly distributed over the entire series (1 year out of every 5; total of 6 years). The archive period (AP), where the analogue dates are being retrieved, is the same as the CP -- also with the VP being excluded -- with an additional exclusion of $\pm30$ days around the target date. Results below are always presented for the VP.
 
 \begin{figure}
 	\includegraphics[width=70mm]{figures/map-stations.jpg}\\
@@ -145,7 +145,7 @@ The local variable to be predicted is here daily precipitation totals (06:00~h~U
 \subsection{Analog methods}
 \label{sec:ams}
 
-Most variants of the AM from \cite{Horton2018b} were considered (Table \ref{table:methods}). These AMs have different degrees of complexity, but they all start with a preselection in order to cope with seasonality. A commonly used preselection is based on the dates (PC: preselection on calendar basis in Table \ref{table:methods}) as candidate situations are extracted from the archive for a period of 120~days centered around the target date. To allow for a more dynamic approach, \citet{BenDaoud2016} based this preselection on the similarity of air temperature (T) at 925~hPa and 600~hPa at the nearest grid point. An undesired mixing of spring and autumn situations is discussed in \citet{Caillouet2016}. 
+Most variants of the AM from \cite{Horton2018b} were considered (Table \ref{table:methods}). These AMs have different degrees of complexity, but they all start with a preselection in order to cope with seasonality. A commonly used preselection is based on the dates (PC: preselection on calendar basis in Table \ref{table:methods}) as candidate situations are extracted from the archive for a period of maximum 120~days centered around the target date. To allow for a more dynamic approach, \citet{BenDaoud2016} based this preselection on the similarity of air temperature (T) at 925~hPa and 600~hPa at the nearest grid point. A resulting undesired mixing of spring and autumn situations is discussed in \citet{Caillouet2016}. 
 
 \begin{table*}[t]
 	\caption{Analogue methods considered in the study, listed by increasing complexity. The analogy criterion is S1 for SLP and Z and RMSE for the other variables.}
@@ -197,11 +197,11 @@ All considered AMs have a first level of analogy on the atmospheric circulation,
 \end{equation}
 where $\Delta \hat{z}_{i}$ is the geopotential height gradient between the \textit{i}-th pair of points for the target day, and $\Delta z_{i}$ is the corresponding observed geopotential height gradient for the candidate situation. The smaller the values S1 are, the more similar the pressure fields.
 
-The most simple method, 2Z, is based only on the analogy of the atmospheric cirulation, using the geopotential height at 1000~hPa and 500~hPa, \citep{Bontron2004}. The most similar $N_{1}$ dates, with the lowest values of S1, are selected as analogues to the target date. The daily precipitation that was measured at these $N_{1}$ dates then provides the empirical conditional distribution, considered as the probabilistic prediction for the target date.
+The most simple method, 2Z, is based only on the analogy of the atmospheric circulation, using the geopotential height at 1000~hPa and 500~hPa, \citep{Bontron2004}. The most similar $N_{1}$ dates, with the lowest values of S1, are selected as analogues to the target date. The daily precipitation that was measured at these $N_{1}$ dates then provides the empirical conditional distribution, considered as the probabilistic prediction for the target date.
 
-The second method, 4Z, is also based on geopotential height only, but using four combinations of pressure levels and temporal windows \citep{Horton2018a}. This method is here considered as a simplified version of a more complex method elaborated by genetic algorithms. It was found that using four geopotentiel height is more informative than using only two.
+The second method, 4Z, is also based on geopotential heights only, but using four combinations of pressure levels and temporal windows \citep{Horton2018a}. This method is here considered as a simplified version of a more complex method elaborated by genetic algorithms. It was found that using four geopotentiel height is more informative than using only two.
 
-Then, the next three methods (2Z-2MI, 4Z-2MI, PT-2Z-4MI, Table \ref{table:methods}) add a second level of analogy to subsample from the first level, based on moisture variables. The predictor considered here is a moisture index (MI), which is the product of the total precipitable water (TPW) and the relative humidity (RH) and was introduced by \citet{Bontron2004}. This predictor is assessed using the root mean square error (RMSE) criterion. The 2Z-2MI method \citep{Bontron2004} considers this index at 850~hPa for two different hours (+12 h and +24 h). The 4Z-2MI method \citep{Horton2018a}, derived from optimizations with genetic algorithms, consider the 600~hPa and 700~hPa levels, but with a change in the selected levels of the geopotential height compared to 4Z. The 4Z-2MI method \citep{BenDaoud2016} considers the moisture index at 700~hPa and 925~hPa, both at +12 h and +24 h.
+Then, the next three methods (2Z-2MI, 4Z-2MI, PT-2Z-4MI, Table \ref{table:methods}) add a second level of analogy based on moisture variables to subsample from the first level. The predictor considered here is a moisture index (MI), which is the product of the total precipitable water (TPW) and the relative humidity (RH) and was introduced by \citet{Bontron2004}. This predictor is assessed using the root mean square error (RMSE) criterion. The 2Z-2MI method \citep{Bontron2004} considers this index at 850~hPa for two different hours (+12 h and +24 h). The 4Z-2MI method \citep{Horton2018a}, derived from optimizations with genetic algorithms, consider the 600~hPa and 700~hPa levels, but with a change in the selected levels of the geopotential height compared to 4Z. The 4Z-2MI method \citep{BenDaoud2016} considers the moisture index at 700~hPa and 925~hPa, both at +12 h and +24 h.
 
 Finally, the most complex method, PT-2Z-4W-4MI, also named "SANDHY" for Stepwise Analogue Downscaling method for Hydrology \citep{BenDaoud2016, Caillouet2016}, adds an intermediate level of analogy, before the moisture predictors, based on the vertical velocity (W) at 850~hPa. It was primarily developed for large and relatively flat/lowland catchments in France (Sa\^{o}ne, Seine).
 
@@ -257,14 +257,14 @@ Although the calibrations have been made on a HPC cluster, they ended up to be h
 
 \begin{figure}[bt]
 	\centering
-	\includegraphics[width=80mm]{figures/boxplot-resol-diff.pdf}
-	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as the failed calibration of AMs with ERA5. The impact of the reanalysis on performance has been isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets (excluding the failed calibration), per station and per method. Same conventions as Fig. 2.}
+	\includegraphics[width=100mm]{figures/boxplot-resol-diff.pdf}
+	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as a failed calibration of AMs with ERA5 (gray; see explanation in text). The impact of the reanalysis on performance has been isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets (excluding the failed calibration), per station and per method. Same conventions as Fig. 2.}
 	\label{fig:resolution}
 \end{figure}
 
-When all calibrations were done, the results showed that ERA5 was performing more poorly than ERA-INT (grayed bars in Fig. \ref{fig:resolution}). An investigation of these results showed that the spatial windows did not grow as much as expected and were non optimal. The reason being that the classic calibration got stuck in local minimas during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue did not happen in a significant way for the other reanalyses and is here due to the very high resolution of ERA5 that can create local minimas that trap the classic calibration. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial window, including increases of multiple grid points at once to get out of local minimas. The classic+ calibration also ended up to be faster due to its ability to not assess every point of the grid in the calculation of the relevance map. With the advent of high resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets.
+When all calibrations were done, the results showed that ERA5 was performing more poorly than ERA-INT (grayed bars in Fig. \ref{fig:resolution}). An investigation of these results showed that the spatial windows did not grow as much as expected and were non optimal. The reason being that the classic calibration got stuck in local minimas during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue did not happen in a significant way for the other reanalyses and is here due to the high resolution of ERA5 that results in a noisier response surface in terms of skill, with local minimas that trap the classic calibration. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial window, including increases of multiple grid points at once to get out of local minimas. The classic+ calibration also ended up to be faster due to its ability to not assess every point of the grid in the calculation of the relevance map. With the advent of high resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets.
 
-\citet{Horton2018b} showed that below 1\degree, the spatial resolution of the reanalyses has generally no significant impact on the performance of AMs. ERA5 has the highest spatial resolution among global reanalyses. As the results in Sect. \ref{sec:results_skill} were obtained using the full spatial resolution (0.25\degree), an additional calibration was here performed using the same resolution as ERA-INT (0.75\degree) to quantify the contribution of the resolution in the gain relatively to ERA-INT. Fig. \ref{fig:resolution} shows that degrading the resolution of ERA5 to ERA-INT resolution does not significantly impact the score. Although a higher model resolution is likely contributing to the improvements of ERA5 compared to ERA-INT, the high output resolution has no impact on AMs performance for the prediction of daily precipitation. The gains are likely due to improvements in the forecast model, the assimilation scheme and the assimilated data. While this conclusion is likely valid for predictands that are principally driven by large-scale predictors, it cannot be transposed to all applications. Indeed, when the phenomenon at hand is mainly driven by mesoscale predictors, such as the lightning activity, the output spatial resolution does matter (unpublished results).
+\citet{Horton2018b} showed that below 1\degree, the spatial resolution of the reanalyses has generally no significant impact on the performance of AMs. This is due to the fact that e.g. the geopotential at 500~hPa has a half-autocorrelation distance of about 1000~km \cite{Thiebaux1985} and thus high resolution does not bring new information. This might however be different for moisture variables. ERA5 has the highest spatial resolution among global reanalyses. As the results in Sect. \ref{sec:results_skill} were obtained using the full spatial resolution (0.25\degree), an additional calibration was here performed using the same resolution as ERA-INT (0.75\degree) to quantify the contribution of the resolution in the gain relatively to ERA-INT. Fig. \ref{fig:resolution} shows that degrading the resolution of ERA5 to ERA-INT resolution does not significantly impact the score. Although a higher model resolution is likely contributing to the improvements of ERA5 compared to ERA-INT, the high output resolution has no impact on AMs performance for the prediction of daily precipitation. We would have expected to see some gains for moisture variables, but they did not materialize. The gains are thus likely due to improvements in the forecast model, the assimilation scheme and the assimilated data. While this conclusion is likely valid for predictands that are principally driven by large-scale predictors, it cannot be transposed to all applications. Indeed, when the phenomenon at hand is mainly driven by mesoscale predictors, such as the lightning activity, the output spatial resolution does matter (unpublished results).
 
 
 \subsection{Shared analog dates}
@@ -285,18 +285,18 @@ As it could be expected, ERA5 shared some similarities in the selection of analo
 \section{Conclusions}
 \label{sec:conclusion}
 
-The choice of a reanalysis has a significant impact on the performance of AMs, as already shown in \citet{Horton2018b}. The influence of the dataset on the skill of the methods can even be larger than this related to the selection of the predictor variables. This has also been observed by other authors \cite{Dayon2015}. One of the conclusions of \citet{Horton2018b} is that the latest version of the full-input reanalyses should be used as they contribute to a better skill in the perfect prognosis context and for Switzerland, which is also likely valid for Europe. The subsequent release of ERA5 then raised the question of the potential benefit it could bring over ERA-INT, and to what extent the high spatial resolution could be informative for statistical downscaling.
+The choice of a reanalysis has a significant impact on the performance of AMs, as already shown in \citet{Horton2018b}. The influence of the dataset on the skill of the methods can even be larger than the one related to the selection of the predictor variables. This has also been observed by other authors \cite{Dayon2015}. One of the conclusions of \citet{Horton2018b} is that the latest version of the full-input reanalyses should be used as they contribute to a better skill in the perfect prognosis context and for Switzerland, which is also likely valid for Europe. The subsequent release of ERA5 then raised the question of the potential benefit it could bring over ERA-INT, and to what extent the high spatial resolution could be informative for statistical downscaling.
 
-This work focused on comparing ERA5 to the other main global reanalyses, and showed that it should be the dataset of choice for all tested AMs. Indeed, it surpassed the other reanalyses most of the time and was selected as the best dataset by about 50\% of the stations, and in on of the two first ranks by 75\% of the stations. Although ERA5 globally performed better than ERA-INT for the assessed AMs, ERA-INT was not systematically superseded by ERA5 for all stations. It it thus important to undertake such comparison with a large enough sample of stations in order to be capture well the overall picture. Even though ERA5 might not be the best reanalysis for all stations, it would not be advisable to patchwork the selection of reanalyses among stations. It would be recommendable however to use not a single, but a selection of reanalyses for certain applications.
+This work focused on comparing ERA5 to the other main global reanalyses, and showed that it should be the dataset of choice for all tested AMs. Indeed, it surpassed the other reanalyses most of the time and was selected as the best dataset by about 50\% of the stations, and in one of the two first ranks by 75\% of the stations. Although ERA5 globally performed better than ERA-INT for the assessed AMs, ERA-INT was not systematically superseded by ERA5 for all stations. It it thus important to undertake such comparison with a large enough sample of stations in order to capture well the overall picture. Even though ERA5 might not be the best reanalysis for all stations, it would not be advisable to patchwork the selection of reanalyses among stations. It would be recommendable however to use not a single, but a selection of reanalyses for certain applications.
 
 ERA5 is distributed at very high spatial (0.25\degree) and temporal (1~h) resolutions. Although AMs are quick techniques, their calibration over several decades can be time consuming. This time increases all the more with a higher spatial resolution of the predictor grids. The high resolution even turned into a trap for the calibration technique here that ended up stuck in local minimas, resulting in poor skills. When using high resolution predictor grids, one should take care that the calibration technique used is able to satisfactorily optimize the spatial windows. The classic+ calibration \citep{Horton2019} could here successfully calibrate the spatial windows thanks to additional moves that allow it to go out of local minimas. \citet{Horton2018b} showed that below 1\degree, the gains are limited for AMs. ERA5 was tested at two resolutions here, its original one and the same resolution as ERA-INT (0.75\degree). The reduction in resolution did not impact the performance of AMs for daily precipitation, here mainly driven by synoptic-scale processes. This was shown not to be valid for predictands driven by mesoscale drivers. It also implies that the output resolution does not explain the gain in skill compared to ERA-INT, which are likely due to improvements in the forecast model, the assimilation scheme and the assimilated data.
 
-To conclude, the use of ERA5 is recommended for the prediction of daily precipitation with AMs in Europe, ideally along with other reanalyses to provide an multi-model approach. However, for predictands that are primarily driven by synoptic-scale processes, using ERA5 at its full resolution is not justified and might even be dangerous if the calibration method does not handle it well.
+To conclude, the use of ERA5 is recommended for the prediction of daily precipitation with AMs in Europe, ideally along with other reanalyses to provide an multi-model approach. However, for predictands that are primarily driven by synoptic-scale processes, using ERA5 at its full resolution is not justified and might even be counterproductive if the calibration method does not handle it well.
 
 
 
 \section*{acknowledgements}
-Precipitation time series were provided by MeteoSwiss. The NCEP/NCAR, NCEP/DOE, and 20CR-2c were provided by the NOAA/OAR/ESRL PSD, Boulder, Colorado, USA, at http://www.esrl.noaa.gov/psd/. Support for the Twentieth Century Reanalysis Project dataset is provided by the U.S. Department of Energy, Office of Science Innovative and Novel Computational Impact on Theory and Experiment (DOE INCITE) program, and Office of Biological and Environmental Research (BER), and by the National Oceanic and Atmospheric Administration Climate Program Office. The CFSR, and JRA-55 were obtained from the CISL Research Data Archive (http://rda.ucar.edu/) at NCAR in Boulder, Colorado, and the NCAR is supported by grants from the National Science Foundation. The Climate Forecast System Reanalysis (CFSR) project is carried out by the Environmental Modeling Center (EMC), National Centers for Environmental Prediction (NCEP). The Japanese 55-year Reanalysis (JRA-55) project is carried out by the Japan Meteorological Agency (JMA). The MERRA-2 was obtained from the Goddard Earth Sciences Data and Information Services Center, Greenbelt, Maryland, from their website at http://disc.sci.gsfc.nasa.gov/mdisc. ERA-interim, ERA-20C, and CERA-20C were obtained from the ECMWF Data Server at http://apps.ecmwf.int/datasets/. ERA5 was obtained from the C3S climate data store (CDS) at https://cds.climate.copernicus.eu. Calculations were performed on UBELIX (http://www.id.unibe.ch/hpc), the HPC cluster at the University of Bern.
+Precipitation time series were provided by MeteoSwiss. The NCEP/NCAR, NCEP/DOE, and 20CR-2c were provided by the NOAA/OAR/ESRL PSD, Boulder, Colorado, USA, at http://www.esrl.noaa.gov/psd/. Support for the Twentieth Century Reanalysis Project dataset is provided by the U.S. Department of Energy, Office of Science Innovative and Novel Computational Impact on Theory and Experiment (DOE INCITE) program, and Office of Biological and Environmental Research (BER), and by the National Oceanic and Atmospheric Administration Climate Program Office. The CFSR, and JRA-55 were obtained from the CISL Research Data Archive (http://rda.ucar.edu/) at NCAR in Boulder, Colorado, and the NCAR is supported by grants from the National Science Foundation. The Climate Forecast System Reanalysis (CFSR) project is carried out by the Environmental Modeling Center (EMC), National Centers for Environmental Prediction (NCEP). The Japanese 55-year Reanalysis (JRA-55) project is carried out by the Japan Meteorological Agency (JMA). The MERRA-2 was obtained from the Goddard Earth Sciences Data and Information Services Center, Greenbelt, Maryland, from their website at http://disc.sci.gsfc.nasa.gov/mdisc. ERA-interim, ERA-20C, and CERA-20C were obtained from the ECMWF Data Server at http://apps.ecmwf.int/datasets/. ERA5 was obtained from the C3S climate data store (CDS) at https://cds.climate.copernicus.eu. Calculations were performed on UBELIX (http://www.id.unibe.ch/hpc), the HPC cluster at the University of Bern. Thanks to C. Obled for for correcting the manuscript.
 
 
 \section*{data availability}
