--- a/references.bib
+++ b/references.bib
@@ -761,4 +761,16 @@
 	title = {{AtmoSwing R tools}},
 	year = {2018}
 }
+@article{Thiebaux1985,
+	author = {Thi{\'{e}}baux, H. Jean},
+	doi = {10.1111/j.1600-0870.1985.tb00275.x},
+	issn = {16000870},
+	journal = {Tellus A},
+	keywords = {2 read once},
+	number = {2},
+	pages = {126--131},
+	title = {{On approximations to geopotential and wind‐field correlation structures}},
+	volume = {37 A},
+	year = {1985}
+}
 
