--- a/main.tex
+++ b/main.tex
@@ -49,11 +49,11 @@
 \maketitle
 
 \begin{abstract}
-Statistical downscaling techniques that are of the perfect prognosis type rely on statistical relationships established between observational data for both predictands and predictors. Predictors are often retrieved from reanalyses, which are considered as pseudo-observations. The impact of the choice of a reanalysis dataset on the skill of the downscaling method is often overlooked as global reanalyses are frequently assumed to be equivalent for the last decades and data-rich regions such as Europe. However, it was recently shown that the selection of a reanalysis dataset has an impact on the method skill that can be even higher than the choice of the predictor variables. Generally, reanalyses that are processed by more recent atmospheric models and that assimilate more data perform better. 
+Perfect prognosis statistical downscaling relies on statistical relationships established between observational data for both predictands and predictors. Predictors are often retrieved from reanalyses, which are considered as pseudo-observations. The impact of the choice of a reanalysis dataset on the skill of the downscaling method is usually overlooked as global reanalyses are frequently assumed to be equivalent for the last decades and data-rich regions such as Europe. However, it was recently shown that the reanalysis dataset has an impact on the method skill that can be even higher than the choice of the predictor variables. Generally, reanalyses that are processed by more recent atmospheric models and that assimilate more data perform best.
 
-Following the recent release of ERA5, this work aims at assessing the extent of the potential gain compared to other global reanalyses, including its predecessor, ERA-interim. The assessment was carried out using six variants of analog methods, which are statistical downscaling techniques, to predict the daily precipitation at 301 stations in Switzerland. ERA5 ended up among the best performing reanalyses and proved the best choice for 50\% of the stations on average across the different analog methods. 
+Following the recent release of ERA5, this work aimed at assessing the extent of the potential gains compared to other global reanalyses, including its predecessor, ERA-interim. The assessment was carried out using six variants of analog methods, which are statistical downscaling techniques, to predict the daily precipitation at 301 stations in Switzerland. ERA5 ended up among the best performing reanalyses and proved the best choice for 50\% of the stations on average across the different analog methods.
 
-However, ERA5 is distributed with a high spatial resolution (0.25\degree), which turned out to be not relevant for analog methods, and which can even be a trap for simple calibration techniques. Indeed, the domains over which the predictor fields are compared need to be optimized, and high-resolution grids come along with numerous sub-optimal local minima. Besides the risk of poorly-calibrated domains, the high resolution also involves much higher computational time for no gain in skill, as long as the predictors considered are at the synoptic scale.
+However, ERA5 is delivered with a high spatial resolution (0.25\degree), which turned out not to be relevant for analog methods, and which can even be a trap for simple calibration techniques. Indeed, the domains over which the predictor fields are compared need to be optimized, and high-resolution grids come along with numerous sub-optimal local minima. Besides the risk of poorly-calibrated domains, the high resolution also requires much higher computational time for no gain in skill, as long as the predictors considered are at a synoptic scale.
 
 
 % Please include a maximum of seven keywords
@@ -62,17 +62,17 @@ However, ERA5 is distributed with a high spatial resolution (0.25\degree), which
 
 \section{Introduction}
 
-Analog methods (AMs), which are part of the statistical downscaling techniques, aim at predicting local meteorological variables, often daily precipitation, based on large-scale predictors. AMs rely on the hypothesis that similar synoptic situations are likely to result in similar local effects, plus a certain variability that is not explained by the considered predictors \citep{Lorenz1969}. To account for this unexplained variability, an ensemble of analog situations is considered, providing a statistical prediction in the form of an empirical conditional distribution made of the corresponding observed predictand values. Multiple variants of the AM exist, eventually with different structures and approaches, but mainly with different selections of predictors.
+Analog methods (AMs), which are statistical downscaling techniques, aim at predicting local meteorological variables, often daily precipitation, based on large-scale predictors. AMs rely on the hypothesis that similar synoptic situations are likely to result in similar local effects, plus a certain variability that is not explained by the considered predictors \citep{Lorenz1969}. To account for this unexplained variability, an ensemble of analog situations is considered. It thus provides a statistical prediction in the form of an empirical conditional distribution made of the corresponding observed predictand values. Multiple variants of the AM exist, eventually with different structures and approaches, but mainly with different predictors.
 
-AMs are most often developed in a perfect prognosis framework \citep{Rummukainen1997, Maraun2010}, where the relationship is calibrated between large-scale and local-scale observations. In this context, global reanalyses are the datasets of choice for the large-scale variables as they provide multivariate gridded outputs that are physically consistent and available all around the globe \citep{Gelaro2017}. There are globally two main types of reanalysis products: those that aim for homogeneity over a long period -- starting at the beginning of the 20th century -- and thus assimilate surface data only, and those that aim for accuracy over a more recent period and that assimilate a maximum of observations, including multiple satellite products. The reanalyses accuracy depends on the quality of the model physics and the analysis process, thus on the quantity and quality of the assimilated observations \citep{Dee2011a}.
+AMs are most often developed in a perfect prognosis framework \citep{Rummukainen1997, Maraun2010}, where the relationship is calibrated between large-scale and local-scale observations. In this context, global reanalyses are the datasets of choice for the large-scale variables as they provide multivariate gridded outputs that are physically consistent and available all around the globe \citep{Gelaro2017}. Globally, two main types of reanalysis products exist: those that aim for homogeneity over a long period -- starting at the beginning of the 20th century -- and hence assimilate surface data only, and those that aim for accuracy over a more recent period and therefore assimilate a maximum of observations, including multiple satellite products. The reanalyses accuracy depends on the quality of the model physics and the analysis process, thus on the quantity and quality of the assimilated observations \citep{Dee2011a}.
 
-The choice of a reanalysis dataset to be used in an AM can be driven by the context of the application, for example, if it requires to cover the 20th century or to be used in an operational context, with the target situation being provided by an NWP model. In the first case, ECMWF twentieth century reanalyses \citep[ERA-20C or CERA-20C --][]{Poli2016, Laloyaux2016} or the Twentieth Century Reanalysis \citep[20CR --][]{Compo2011} produced by NOAA can be used \citep[for example,][]{Kuentz2015, Caillouet2016, Brigode2016, Bonnet2017}. In the second case, one should prefer a reanalysis that is produced by the same NWP model as the operational forecast to reduce the inter-models biases. One might also prefer a sub-optimal reanalysis offering a longer archive, thus containing more candidate analogs. However, in many cases, the selection of the reanalysis is arbitrary and might be driven by a preference for the local provider. 
+The choice of a reanalysis dataset to be used in AMs can be driven by the context of the application. For example, if it needs to cover the 20th century, ECMWF twentieth century reanalyses \citep[ERA-20C or CERA-20C --][]{Poli2016, Laloyaux2016} or the Twentieth Century Reanalysis \citep[20CR --][]{Compo2011} produced by NOAA can be used \citep[for example,][]{Kuentz2015, Caillouet2016, Brigode2016, Bonnet2017}. In an operational context, with the target situation being provided by an NWP model, one should prefer a reanalysis that is produced by the same NWP model as the operational forecast to reduce the inter-models biases. One might also prefer a sub-optimal reanalysis offering a longer archive, thus containing more candidate analogs. However, in many cases, the selection of the reanalysis is arbitrary and might be driven by a preference for the local provider.  
 
 NCEP/NCAR Reanalysis 1 \citep[NR-1 --][]{Kalnay1996, Kistler2001} and NCEP/DOE Reanalysis 2 \citep[NR-2 --][]{Kanamitsu2002} were used in many applications of AMs \citep{Timbal2003, Bontron2004, Wetterhall2005a, Gangopadhyay2005, Altava-Ortiz2006, Barrera2007, Cannon2007, Matulla2007, Bliefernicht2007, Maurer2008, BenDaoud2009, Wu2012, Marty2012, Teng2012, Horton2012, Yiou2014}. ERA-40 \citep{Uppala2005}, produced by ECMWF, has also been used substantially \citep {BenDaoud2009, Willems2011b, JakobThemessl2011a, BenDaoud2011, Turco2011a, Franke2011, Pascual2012b, Schenk2012, Ribalaygua2013a, Osca2013, Radanovics2013, Martin2014b, Chardon2014, BenDaoud2016}. Its sucessor, ERA-Interim \citep[ERA-INT --][]{Dee2011a}, has been used by \cite{Raynaud2016b}. NASA's Modern-Era Retrospective Analysis for Research and Applications \citep[MERRA -- ][]{Rienecker2011} has been used by \citet{Vanvyve2015}. The Japanese products, the Japanese 55-year Reanalysis \citep[JRA-55 --][]{Kobayashi2015, Harada2016} and its conventional-only JRA-55 Conventional \citep[JRA-55C --][]{Kobayashi2014}, were not used in AMs to the author knowledge. Newer products, such as NCEP's the Climate Forecast System Reanalysis \citep[CFSR --][]{Saha2010a} or MERRA version 2 \citep[MERRA-2 -- ][]{Gelaro2017} are not much used yet in AMs. One can often observe a lag between the release of a new reanalysis dataset and its adoption in AMs.
 
-Most applications of AMs are based on a single reanalysis dataset, and the impact of this choice is overlooked. \citet{BenDaoud2009} compared NR-1 to ERA-40 and found no significant difference for the predictors considered. Later, \citet{Dayon2015} compared NR-1, MERRA, ERA-INT, and 20CR and found out that the choice of the reanalysis dataset has a non-negligible impact on the performance of the AMs that can even be greater than the choice of the predictor variables. They concluded that the role of the reanalyses should not be underestimated. Such influence has also been observed for other statistical downscaling methods \citep[e.g.][]{Koukidis2009}. \citet{Horton2018b} compared ten global reanalyses and concluded that the impact of the dataset on the results of the AM is significant. As \citet{Dayon2015}, the impact of the reanalysis was found to be higher than that of the selected predictors. Some recommendations were established to select an appropriate reanalysis depending on the period and the predictors of interest. Globally, more recent products that assimilate more data show better skills \citep{Horton2018b}. In that respect, the recent release of ERA5 \citep{Hersbach2019} raises the question of how better it can be for AMs compared to its predecessor ERA-Interim, and what are the benefits and eventual pitfalls of its higher spatial and temporal resolutions.
+Most applications of AMs are based on a single reanalysis dataset, and the impact of this choice is overlooked. \citet{BenDaoud2009} compared NR-1 to ERA-40 and found no significant difference for the predictors considered. Later, \citet{Dayon2015} compared NR-1, MERRA, ERA-INT, and 20CR and found out that the choice of the reanalysis dataset has a non-negligible impact on the performance of the AMs that can even be greater than the choice of the predictor variables. They concluded that the role of the reanalyses should not be underestimated. Such influence has also been observed for other statistical downscaling methods \citep[e.g.][]{Koukidis2009}. \citet{Horton2018b} compared ten global reanalyses and concluded that the impact of the dataset on the results of the AM is significant. As \citet{Dayon2015}, the impact of the reanalysis was found to be sometimes higher than that of the selected predictors. Some recommendations were established to select an appropriate reanalysis depending on the period and the predictors of interest. Globally, more recent products that assimilate more data show better skills \citep{Horton2018b}. In that respect, the recent release of ERA5 \citep{Hersbach2019} raises the question of its potential benefits for AMs compared to its predecessor ERA-Interim.
 
-ERA5 was compared to nine other global reanalyses for seven AMs at 301 stations in Switzerland. The data and methods are described in section \ref{sec:data_methods}. The impact of the skill is presented in section \ref{sec:results_skill}, the spatial resolution is assessed in section \ref{sec:results_hires}, and the similarity to other reanalyses is presented in section \ref{sec:results_shared_dates}. The conclusions (section \ref{sec:conclusion}) summarize the key findings.
+ERA5 was compared to nine other global reanalyses for seven AMs at 301 stations in Switzerland. The data and methods are described in section \ref{sec:data_methods}. The impact on the skill is presented in section \ref{sec:results_skill}, the spatial resolution is assessed in section \ref{sec:results_hires}, and the similarity to other reanalyses is presented in section \ref{sec:results_shared_dates}. The conclusions (section \ref{sec:conclusion}) summarize the key findings.
 
 
 \section{Data and methods}
