Addition of line spacing and line numbers.

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,12 @@
 \usepackage{multirow}
 \usepackage{gensymb}
 
+\usepackage[modulo]{lineno}
+
+\usepackage{setspace}
+
+\onehalfspacing
+
 % Update article type if known
 \papertype{Original Article}
 % Include section in journal if known, otherwise delete
@@ -59,6 +65,8 @@ However, ERA5 is delivered with a high spatial resolution (0.25\degree), which t
 % Please include a maximum of seven keywords
 \keywords{reanalyses, ERA5, statistical downscaling, analog method, precipitation, Switzerland}
 \end{abstract}
+
+\linenumbers
 
 \section{Introduction}
 
